# Simple-Mandelbrot

./: .gitignore  .pre-commit-config.yaml  Makefile  Mandelbrot_Main.py  Mandelbrotcalc.py  README.md  pyproject.toml  sample.env  setup.py
mandelbrot/: __init__.py
