[tool.poetry]
name = "simple-mandelbrot"
version = "0.1.0"
description = ""
authors = ["Cormac Rogers <12558716+Crowgers@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
